--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Building Leaders. Building Legacy.</p>
 
     <input type="password" id="password" placeholder="Enter Password">
+    <label><input type="checkbox" id="showPassword"> Show Password</label>
     <button id="loginBtn">Login</button>
   </div>
 
