--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>PUYOLA Login</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="login-container">
-    <img src="logo.png" alt="PUYOLA Logo" class="logo">
+    <img src="logo.png" alt="PUYOLA Logo" class="logo" />
     <h1>PUYOLA</h1>
     <p>Building Leaders. Building Legacy.</p>
 
-    <input type="password" id="password" placeholder="Enter Password">
-    <label><input type="checkbox" id="showPassword"> Show Password</label>
+    <input type="password" id="password" placeholder="Enter Password" />
+    <label>
+      <input type="checkbox" id="showPassword" />
+      Show Password
+    </label>
+
     <button id="loginBtn">Login</button>
   </div>
 
