--- a/member.html
+++ b/member.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>PUYOLA Member Dashboard</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="PUYOLA Logo" class="logo">
+    <img src="logo.png" alt="PUYOLA Logo" class="logo" />
     <h1>Member Dashboard</h1>
   </header>
 
   <main>
-    <section id="events-section">
+    <section>
       <h2>Events</h2>
       <div id="events-list"></div>
     </section>
 
-    <section id="polls-section">
+    <section>
       <h2>Polls</h2>
       <div id="polls-list"></div>
     </section>
 
-    <section id="announcements-section">
+    <section>
       <h2>Announcements</h2>
       <div id="announcements-list"></div>
     </section>
   </main>
 
   <footer>
-    Copyright <span id="year"></span> PUYOLA | Designed by Oguma Austine | All Rights Reserved
+    Copyright <span id="year"></span> PUYOLA |
+    Designed by Oguma Austine | All Rights Reserved
   </footer>
 
   <script>
